fix overflow-x on pre elements

--- a/_public/css/custom.css
+++ b/_public/css/custom.css
@@ -23,7 +23,7 @@ img {
 pre {
   word-wrap: normal;
   white-space: pre;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .container .authorship a {
